
next
----
- included default player skin by Jordach
- added localization support
- added Spanish translation


v1.4
----
- prev/next buttons placed closer together
- added option to show previews
- changed name to "wardrobe_ad" to distinguish from original mod


v1.3
----
- renamed "default" label to "Sam"
- optimized formspec:
	- re-cycle through pages when reaching first or last page
	- does not close & re-open each time prev/next pushed (fixes cursor being centered)


v1.2
----
- forked from prestidigitator's wardrobe mod
- changed license to MIT
- added player_api as dependency
- added method to register skins
- skins can be registered individually from within mod code
- added option to set number of skins per page
- default skin always listed first


--- wardrobe by prestidigitator ---


v1.1
----
- Released 2015-04-24
- Removed farming as a dependency; wool is from wool.
- Auto-detection of player mesh name (thank you indriApollo).
- Removed warning caused by access of uninitialized global variale (even though it was just a check for nil).


v1.0
----
- Released 2014-07-05
- First working version