@@ -1,4 +1,3 @@
 
 TODO:
 - use wdata or mod_storage for writing/reading world data
-- check cached skins after mods loaded
